force-app/main/default/objects/PS_IFS_Description__c/PS_IFS_Description__c.object-meta.xml
<CustomObject>
    <label>PS_IFS_Description</label>
    <nameField>
        <label>PS_IFS_Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS_IFS_Description</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>