force-app/main/default/objects/PS_IFS_Description__c/fields/OA__c.field-meta.xml
<CustomField>
    <fullName>OA__c</fullName>
    <label>OA</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>