force-app/main/default/objects/PS_IFS_Description__c/fields/OB__c.field-meta.xml
<CustomField>
    <fullName>OB__c</fullName>
    <label>OB</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>