force-app/main/default/objects/PS_IFS_Description__c/fields/ORP__c.field-meta.xml
<CustomField>
    <fullName>ORP__c</fullName>
    <label>ORP</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>