force-app/main/default/objects/PS_IFS_Description__c/fields/ORV__c.field-meta.xml
<CustomField>
    <fullName>ORV__c</fullName>
    <label>ORV</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>