force-app/main/default/objects/PS_IFS_Description__c/fields/OW__c.field-meta.xml
<CustomField>
    <fullName>OW__c</fullName>
    <label>OW</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>