force-app/main/default/objects/PS_IFS_Description__c/fields/PLANNER__c.field-meta.xml
<CustomField>
    <fullName>PLANNER__c</fullName>
    <label>PLANNER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>